# tide-google-oauth-example

./: .gitignore  Cargo.toml  sample.toml
src/: app.rs  config.rs  main.rs
src/api/: auth.rs  mod.rs
